# codex

./: .gitignore  .mcp.json  README.md  ROUTING-AWARE-SYNC-IMPLEMENTATION-SUMMARY.md  VERSIONING.md  codex.md  package-lock.json  package.json  vitest.config.ts
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/plans/: codex-cli-migration-plan.md  routing-aware-sync-implementation.md
.cursor/rules/: fractary-codex.mdc
.fractary/: .gitignore  codex.yaml  config.yaml  post-merge-actions.md
.fractary/codex/: config.yaml
.fractary/specs/: auto-version-bumping.md  codex-sync-to-codex-missing-remote-push.md
.github/workflows/: js-ci.yml  js-publish.yml  python-ci.yml  python-publish.yml  version-check.yml
.husky/: pre-commit
.opencode/: package.json
.opencode/plugins/: fractary-codex.js
cli/: .gitignore  README.md  package.json  tsup.config.ts  vitest.config.ts
cli/src/: cli.ts  index.ts
docs/: CLI-PLUGIN-SDK-ALIGNMENT-ANALYSIS.md  README.md  configuration.md  getting-started.md
docs/cli/: README.md
docs/examples/: README.md
docs/features/: cache.md  config.md  fetch-documents.md  sync.md
scripts/: bump-versions.js  bump-versions.test.js
sdk/py/: LICENSE  README.md  pyproject.toml
sdk/py/fractary_codex/cache/: __init__.py
sdk/py/fractary_codex/core/: config.py  metadata.py  patterns.py
sdk/py/fractary_codex/errors/: exceptions.py
sdk/py/fractary_codex/references/: __init__.py  parser.py
sdk/py/fractary_codex/schemas/: __init__.py  config.py
sdk/py/fractary_codex/storage/: __init__.py  manager.py
sdk/py/fractary_codex/types/: __init__.py  custom.py
sdk/py/tests/: conftest.py  test_core.py  test_references.py
specs/: CODEX-SYNC-BUG-2026-01-08.md  SPEC-20251216183224-codex-cli-migration.md  SPEC-20251217064942-mcp-server-extraction.md  SPEC-20251217102834-mcp-first-integration-strategy.md  SPEC-20251217103755-codex-component-alignment.md  SPEC-20260103225936-fix-skill-directory-naming.md  SPEC-20260104-sync-command-path-filtering.md  SPEC-20260105-command-agent-refactor.md  SPEC-20260105-routing-aware-sync-FILES.md  SPEC-20260105-routing-aware-sync.md  SPEC-20260105-standardize-codex-config-locations.md  SPEC-20260107-mcp-per-project-migration.md  SPEC-20260108-plural-field-normalization.md  SPEC-20260109-improved-sync-config-structure.md  SPEC-20260111-codex-archive-awareness.md  SPEC-20260115-codex-file-plugin-integration.md  SPEC-SDK-CONSOLIDATION.md  WORK-00002-python-sdk.md  routing-aware-sync-fix.md
src/: index.ts
(+315 files in other folders)
